--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -18,6 +18,8 @@
         {{item.note}}
       </div>
     </ion-item>
+    <ion-item routerLink="first">Naviga verso first</ion-item>
+    <ion-item routerLink="second">Naviga verso second</ion-item>
   </ion-list>
   <!--
     <div *ngIf="selectedItem" padding>
